@@ -1,3 +1,10 @@
+2009-05-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	In DefaultBtContext::getActualBasePath(), return first
+	FileEntry::getPath() for single file torrent.	
+	* src/DefaultBtContext.cc
+	* test/DefaultBtContextTest.cc
+
 2009-05-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Removed directIOAllowed() from BinaryStream, DiskWriter,
